# haskell-donate

./: .dir-locals.el  .gitignore  .gitmodules  Dockerfile  Main.hs  README.md  donate.cabal
backend/: Dockerfile  Main.hs  cabal.project  donate.cabal
frontend/: Dockerfile  donate.html  donate.js  index.html  security.html  theme.css
