name:                haskell-donate
version:             0.0.0.0
category:            Web
license:             MIT
synopsis:            Server to process donations for Haskell.org
homepage:            https://github.com/haskell-infra/donate
bug-reports:         https://github.com/haskell-infra/donate
license-file:        LICENSE.txt
copyright:           Copyright (c) Austin Seipp 2014-2016
author:              Austin Seipp
maintainer:          Austin Seipp <aseipp@pobox.com>
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3

description:
  Donation server.

source-repository head
  type: git
  location: https://github.com/haskell-infra/donate.git

-------------------------------------------------------------------------------
-- Main executable

executable donate
  ghc-options:      -Wall
  default-language: Haskell2010
  main-is:          Main.hs

  build-depends:
    base           >= 4     && < 5,
    bytestring     >= 0.9   && < 0.11,
    mtl            >= 2.2   && < 2.3,
    split          >= 0.2.3 && < 0.3,
    text           >= 1.2   && < 1.3,

    aeson          == 0.11.*,
    http-media     == 0.6.*,
    stripe-haskell == 2.1.*,
    stripe-core    == 2.1.*,
    servant-server == 0.9.*,
    wai            == 3.2.*,
    warp           == 3.2.*
